--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,5 @@
 $lt-gray: #ddd;
+$floral-white: #fffaf0;
 $background-dark: #512DA8;
 $background-light: #9575CD;
 $background-pale: #D1C4E9;
@@ -75,3 +76,15 @@ body{
     z-index: 1;
 }
 
+.modal-header {
+    background:$background-dark;
+    color:$floral-white;
+
+    .close {
+        color:$floral-white;
+    }
+}
+
+.modal-body {
+    background:$background-pale;
+}
